Index.html corrigido

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>LABORATIOS DE BIOINFORMATICA</h1>
+<h1>LABORATÓRIOS DE BIOINFORMATICA</h1>
 <p>Site está on!</p>
 </body>
 </html>
