--- a/index.html
+++ b/index.html
@@ -1,7 +1,142 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>LABORATÓRIOS DE BIOINFORMATICA</h1>
-<p>Site está on!</p>
-</body>
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Legionella pneumophila </title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/portfolio-item.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav m-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/index.html">Home &nbsp &nbsp &nbsp
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Informações do relatório</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Separated link</a>
+              </div>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#"> &nbsp &nbsp &nbsp Ferramentas utilizadas  &nbsp &nbsp &nbsp</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="/scripts">Scripts</a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+
+      <!-- Portfolio Item Heading -->
+      <h1 class="my-4"><br>Legionella pneunophila<br>
+      </h1>
+      <hr>
+
+      <!-- Portfolio Item Row -->
+      <div class="row">
+        <div class="col-md-6">
+          <h3 class="my-3">Descrição do Projeto</h3>
+          <p>FALAR DO PROJETO AQUI</p>
+        </div>
+
+        <div class="col-md-5">
+          <img class="img-fluid" src="./img/legionella.jpg" alt="">
+        </div>
+
+      </div>
+      <!-- /.row -->
+      <hr>
+      <!-- Related Projects Row -->
+      <h3 class="my-4">Grupo de Trabalho nº6</h3>
+
+
+        <div class="container">
+          <div class="row">
+            <div class="col-sm">
+              <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+              </a>
+            </div>
+
+            <div class="col-sm">
+              <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+              </a>
+            </div>
+
+            <div class="col-sm">
+              <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+              </a>
+            </div>
+
+            <div class="col-sm">
+              <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+              </a>
+            </div>
+
+            <div class="col-sm">
+              <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+              </a>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
+
+    <!-- Footer -->
+    <footer class="py-3 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; 2018</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  </body>
+
 </html>
