--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="./website/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/portfolio-item.css" rel="stylesheet">
+    <link href="./website/css/portfolio-item.css" rel="stylesheet">
 
   </head>
 
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav m-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/index.html">Home &nbsp &nbsp &nbsp
+              <a class="nav-link" href="./index.html">Home &nbsp &nbsp &nbsp
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -74,7 +74,7 @@
         </div>
 
         <div class="col-md-5">
-          <img class="img-fluid" src="./img/legionella.jpg" alt="">
+          <img class="img-fluid" src="./website/img/legionella.jpg" alt="">
         </div>
 
       </div>
