Criada pasta scripts e ficheiros transferidos est

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="./website/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./website/css/portfolio-item.css" rel="stylesheet">
+    <link href="css/portfolio-item.css" rel="stylesheet">
 
   </head>
 
@@ -34,15 +34,8 @@
               </a>
             </li>
 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Informações do relatório</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="./relatorio">Relatório</a>
             </li>
 
             <li class="nav-item">
@@ -87,33 +80,23 @@
         <div class="container">
           <div class="row">
             <div class="col-sm">
-              <a href="#">
-                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-              </a>
+                <p>Ana Carolina Silva<br>PG35351</p>
             </div>
 
             <div class="col-sm">
-              <a href="#">
-                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-              </a>
+                <p>Ana Daniela Fernandes<br>PG33745</p>
             </div>
 
             <div class="col-sm">
-              <a href="#">
-                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-              </a>
+                <p>Carlos Martins<br>PG36095</p>
             </div>
 
             <div class="col-sm">
-              <a href="#">
-                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-              </a>
+                <p>Daniel Soares<br>PG35358</p>
             </div>
 
             <div class="col-sm">
-              <a href="#">
-                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-              </a>
+                <p>Eduardo Cunha<br>A71940</p>
             </div>
 
           </div>
