Melhorias no website (tabelas e ferramentas)

--- a/index.html
+++ b/index.html
@@ -28,22 +28,25 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav m-auto">
-            <li class="nav-item active">
+            <li class="nav-item ">
               <a class="nav-link" href="./index.html">Home &nbsp &nbsp &nbsp
-                <span class="sr-only">(current)</span>
               </a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="./relatorio">Relatório</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="#"> &nbsp &nbsp &nbsp Ferramentas utilizadas  &nbsp &nbsp &nbsp</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="/scripts">Scripts</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="./ferramentas.html">Ferramentas utilizadas &nbsp &nbsp &nbsp</a>
+            </li>
+
+            <li class="nav-item active">
+              <a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
             </li>
 
           </ul>
@@ -55,7 +58,7 @@
     <div class="container">
 
       <!-- Portfolio Item Heading -->
-      <h1 class="my-4"><br>Legionella pneunophila<br>
+      <h1 class="my-4"><br>Legionella pneumophila<br>
       </h1>
       <hr>
 
@@ -115,10 +118,6 @@
       </div>
       <!-- /.container -->
     </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
