Criação de outras páginas html (trabalhorealizado e separação por tópicos)

--- a/analiseliteratura.html
+++ b/analiseliteratura.html
@@ -9,11 +9,7 @@
     <meta name="author" content="">
 
     <title>Legionella pneumophila </title>
-
-    <!-- Bootstrap core CSS -->
     <link href="./website/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
     <link href="css/portfolio-item.css" rel="stylesheet">
 
   </head>
@@ -58,71 +54,10 @@
       </div>
     </nav>
 
-    <!-- Page Content -->
-    <div class="container">
+    <br>
+    <br>
+    <br>
 
-      <!-- Portfolio Item Heading -->
-      <h1 class="my-4"><br>Legionella pneumophila<br>
-      </h1>
-      <hr>
+    <h4> Análise de Literatura </h4>
 
-      <!-- Portfolio Item Row -->
-      <div class="row">
-        <div class="col-md-6">
-          <h3 class="my-3">Descrição do Projeto</h3>
-          <p>FALAR DO PROJETO AQUI</p>
-        </div>
-
-        <div class="col-md-5">
-          <img class="img-fluid" src="./website/img/legionella.jpg" alt="">
-        </div>
-
-      </div>
-      <!-- /.row -->
-      <hr>
-      <!-- Related Projects Row -->
-      <h3 class="my-4">Grupo de Trabalho nº6</h3>
-
-
-        <div class="container">
-          <div class="row">
-            <div class="col-sm">
-                <p>Ana Carolina Silva<br>PG35351</p>
-            </div>
-
-            <div class="col-sm">
-                <p>Ana Daniela Fernandes<br>PG33745</p>
-            </div>
-
-            <div class="col-sm">
-                <p>Carlos Martins<br>PG36095</p>
-            </div>
-
-            <div class="col-sm">
-                <p>Daniel Soares<br>PG35358</p>
-            </div>
-
-            <div class="col-sm">
-                <p>Eduardo Cunha<br>A71940</p>
-            </div>
-
-          </div>
-        </div>
-
-      </div>
-      <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-
-    <!-- Footer -->
-    <footer class="py-3 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; 2018</p>
-      </div>
-      <!-- /.container -->
-    </footer>
-
-  </body>
-
-</html>
+    <p> Primeiramente, começou-se por automatizar a seleção dos artigos relevantes que permitiam conhecer melhor o organismo, via metabólica e genes de interesse para o grupo. Esta automatização foi realizada com recurso ao Biopython que permitiu uma pesquisa rápida e eficiente na plataforma Pubmed. Assim desenvolveram-se duas funções: uma que permite obter o número de artigos disponíveis relacionados com termo colocado como argumento e outra que permite obter outras informações (como autor, título, etc) importantes para identificação dos artigos relevantes.  </p>
