--- a/tabela.html
+++ b/tabela.html
@@ -20,7 +20,6 @@
 
 <body>
 
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,16 +27,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav m-auto">
-            <li class="nav-item active">
+            <li class="nav-item ">
               <a class="nav-link" href="./index.html">Home &nbsp &nbsp &nbsp
               </a>
+            </li>
+
+            <li class="nav-item active">
+              <a class="nav-link" href="./trabalhorealizado.html">Trabalho Realizado &nbsp &nbsp &nbsp</a>
             </li>
 
             <li class="nav-item active">
               <a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
             </li>
 
-            <li class="nav-item ">
+            <li class="nav-item active">
               <a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
             </li>
 
