Correções nas páginas html.

--- a/analisegeneseproteinas.html
+++ b/analisegeneseproteinas.html
@@ -57,17 +57,17 @@
 	<br>
 	<br>
 
-	<h4> &nbsp Análise e anotação dos genes e proteínas de interesse  </h4>
-	<p>  &nbsp &nbsp De forma a proceder a anotação dos genes e proteínas de interesse realizou-se uma tabela com a seguinte informação: 
+	<h4> Análise e anotação dos genes e proteínas de interesse  </h4>
+	<p>  &nbsp De forma a proceder a anotação dos genes e proteínas de interesse realizou-se uma tabela com a seguinte informação: 
 		<ol>
 			<li>Identificação do gene: geneID; accession (NCBI); locus tag (NCBI); nome do gene (NCBI); strand (NCBI) </li>
 			<li>Identifcação da proteína: UniprotID; grau de revisão (Uniprot); accession number (Uniprot); protein name (Uniprot); número de aminoácidos (Uniprot); EC number (NCBI); descrição/função (NCBI); localização (Biocyc); gene ontology (Uniprot)</li>
 		</ol>
 
-		&nbsp &nbsp  Esta informação foi extraída das bases de dados com recurso a scripts Biopython e confirmada com a tabela disponibilizada no NCBI, mais especificamente no seguinte site:<br>&nbsp <a href="https://www.ncbi.nlm.nih.gov/genome/proteins/416?genome_assembly_id=300116"> &nbsp https://www.ncbi.nlm.nih.gov/genome/proteins/416?genome_assembly_id=300116</a><br>  
+		&nbsp Esta informação foi extraída das bases de dados com recurso a scripts Biopython e confirmada com a tabela disponibilizada no NCBI, mais especificamente no seguinte site:<br><a href="https://www.ncbi.nlm.nih.gov/genome/proteins/416?genome_assembly_id=300116"> &nbsp https://www.ncbi.nlm.nih.gov/genome/proteins/416?genome_assembly_id=300116</a><br>  
 	</p>
 	<p>
-		&nbsp &nbsp  Como auxilio para esta anotação, começou-se por verificar que proteínas estão relacionadas com a via metabólica, biossíntese de flavina. Desta forma, recorreu-se à plataforma Biocyc onde se verificou que existiam 5 proteínas principais de interesse.  
+		&nbsp Como auxilio para esta anotação, começou-se por verificar que proteínas estão relacionadas com a via metabólica, biossíntese de flavina. Desta forma, recorreu-se à plataforma Biocyc onde se verificou que existiam 5 proteínas principais de interesse.  
 
 		Também foi criado um script que permitisse aceder ao NCBI e extrair o genoma completo do organismo Legionella pneumophila subsp. pneumophila str. Philadelphia 1, guardando este num ficheiro do tipo genbank.   
 	</p>
