--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
       <div class="row">
         <div class="col-md-6">
           <h3 class="my-3">Descrição do Projeto</h3>
-          <p>FALAR DO PROJETO AQUI</p>
+          <p>Este trabalho tem como principal objetivo a utilização de algumas ferramentas bioinformáticas abordadas na unidade curricular de Laboratórios de Bioinformática. Mais concretamente será analisada a via metabólica – Biossíntese de Flavina - da Legionella pneumophila subsp. pneumophila str. Philadelphia 1, assim como proteínas e genes de interesse para esta via, não só ao nível metabólico como também ao nível da regulação.<br> Para esta análise recorreu-se à pesquisa em bases de dados relevantes, assim como ao desenvolvimento de scripts de Biopython que permitem a automatizar a análise e anotação de genes e proteínas de interesse.  </p>
         </div>
 
-        <div class="col-md-5">
+        <div class="col-md-6">
           <img class="img-fluid" src="./website/img/legionella.jpg" alt="">
         </div>
 
