--- a/ferramentas.html
+++ b/ferramentas.html
@@ -1,39 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
+<head>
 
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		<meta name="author" content="">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-		<title>Legionella pneumophila </title>
+	<title>Legionella pneumophila </title>
 
-		<!-- Bootstrap core CSS -->
-		<link href="./website/css/bootstrap.min.css" rel="stylesheet">
+	<!-- Bootstrap core CSS -->
+	<link href="./website/css/bootstrap.min.css" rel="stylesheet">
 
-		<!-- Custom styles for this template -->
-		<link href="css/portfolio-item.css" rel="stylesheet">
+	<!-- Custom styles for this template -->
+	<link href="css/portfolio-item.css" rel="stylesheet">
 
-	</head>
+</head>
 
-	<body>
+<body>
 
-			<br><br><br>
+	    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav m-auto">
+            <li class="nav-item ">
+              <a class="nav-link" href="./index.html">Home &nbsp &nbsp &nbsp
+              </a>
+            </li>
 
-			<h6><a>FERRAMENTAS QUE FORAM UTILIZADAS, COM POSSÍVEL LINK? Do género de <a href="https://blast.ncbi.nlm.nih.gov/Blast.cgi">BLAST</a> </h6>
-			
-			<br><br><br>
-			
-		<footer class="py-3 bg-dark">
-			<div class="container">
-				<p class="m-0 text-center text-white">Copyright &copy; 2018</p>
-			</div>
-			<!-- /.container -->
-		</footer>
+            <li class="nav-item active">
+              <a class="nav-link" href="./trabalhorealizado.html">Trabalho Realizado &nbsp &nbsp &nbsp</a>
+            </li>
 
-	</body>
+            <li class="nav-item active">
+              <a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
+            </li>
+
+            <li class="nav-item active">
+              <a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
+            </li>
+
+            <li class="nav-item active">
+              <a class="nav-link" href="./ferramentas.html">Ferramentas utilizadas &nbsp &nbsp &nbsp</a>
+            </li>
+
+            <li class="nav-item active">
+              <a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+	<br><br><br>
+
+	<h6><a>FERRAMENTAS QUE FORAM UTILIZADAS, COM POSSÍVEL LINK? Do género de <a href="https://blast.ncbi.nlm.nih.gov/Blast.cgi">BLAST</a> </h6>
+
+	<br>
+
+	<h4>Análise de outras bases de dados:</h4> 
+
+	<p>  &nbsp Quanto a análise dos motifs das proteínas que se encontram na tabela após terem sido corridas individualmente na base de dados da “ScanProsite” e após ter sido feito o seu BLAST podemos confirmar que os dados obtidos estão de acordo com os obtidos anteriormente. Quanto à função esperada das proteínas também podemos inferir que está de acordo com as funções encontradas anteriormente uma vez que nestas proteínas podemos encontrar domínios conservados, quer sejam centros catalíticos ou zonas onde há a presença de elementos metálicos, nomeadamente o Zinco, centros estes que estão relacionadas com a função enzimática das proteínas abordadas.<br>
+
+		&nbsp Esta informação é ainda posteriormente validada através da análise das proteínas na base de dados RCSB PDB onde se encontra informação relativa á estrutura, nomeadamente domínios e subunidades da proteína, e composição, não só da macromolécula no geral como de outras moléculas mais pequenas que se encontram na proteína e que podem funcionar por exemplo como ligandos. Após esta análise conseguimos confirmar a informação previamente recolhida de outras bases de dados e do BLAST podendo ser visível a presença dos centros catalíticos (relativos aos grupos de fosfato presentes na proteína) e elementos metálicos como o Zinco.
+	</p>
+
+
+	<br><br><br>
+
+	<footer class="py-3 bg-dark">
+		<div class="container">
+			<p class="m-0 text-center text-white">Copyright &copy; 2018</p>
+		</div>
+		<!-- /.container -->
+	</footer>
+
+</body>
 
 
 </html>
