--- a/trabalhorealizado.html
+++ b/trabalhorealizado.html
@@ -58,14 +58,16 @@
 	<br>
 	<br>
 
-	<center><h4> <a class="nav-link" href="./analiseliteratura.html"> Análise de Literatura </h4></center>
+	<center><h4> <a class="nav-link" href="./analiseliteratura.html"> Análise de Literatura </a></h4></center>
 
-	<center><h4> <a class="nav-link" href="./analisegeneseproteinas.html">Análise e anotação dos genes e proteínas de interesse</h4><center>
+	<center><h6> (No relatório fala de Flavin Biosynthesis logo a seguir. É para colocar na análise de literatura?)</h6></center>
 
-	<center><h4> <a class="nav-link" href="./homologiasBLAST.html"> Análise de homologias por BLAST </h4></center>
+	<center><h4> <a class="nav-link" href="./analisegeneseproteinas.html">Análise e anotação dos genes e proteínas de interesse</a></h4><center>
 
-	<center><h4> <a class="nav-link" href="./ferramentasdeanalise.html"> Ferramentas de análise das propriedades da proteína </h4></center>
+	<center><h4> <a class="nav-link" href="./homologiasBLAST.html"> Análise de homologias por BLAST</a> </h4></center>
 
-	<center><h4> <a class="nav-link" href="./alinhamento.html"> Alinhamento múltiplo e filogenia </h4></center>
+	<center><h4> <a class="nav-link" href="./ferramentasdeanalise.html"> Ferramentas de análise das propriedades da proteína</a> </h4></center>
 
-	<center><h4> <a class="nav-link" href="./regulacao.html"> Regulação das vias metabólicas </h4></center>
+	<center><h4> <a class="nav-link" href="./alinhamento.html"> Alinhamento múltiplo e filogenia</a> </h4></center>
+
+	<center><h4> <a class="nav-link" href="./regulacao.html"> Regulação das vias metabólicas </a></h4></center>
