Atualização barra de hiperligações

--- a/index.html
+++ b/index.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-    <title>Legionella pneumophila </title>
-    <link href="./website/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/portfolio-item.css" rel="stylesheet">
+	<title>Legionella pneumophila </title>
 
-  </head>
+	<link href="./website/css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/portfolio-item.css" rel="stylesheet">
 
-  <body>
+</head>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav m-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="./index.html">Home &nbsp &nbsp &nbsp
-              </a>
-            </li>
+<body>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="./trabalhorealizado.html">Trabalho Realizado &nbsp &nbsp &nbsp</a>
-            </li>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+		<div class="container">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav m-auto">
+					<li class="nav-item ">
+						<a class="nav-link" href="./index.html">Home &nbsp &nbsp &nbsp
+						</a>
+					</li>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
-            </li>
+					<li class="nav-item active">
+						<a class="nav-link" href="./Introducao.html">Introdução &nbsp &nbsp &nbsp</a>
+					</li>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
-            </li>
+					<li class="nav-item active">
+						<a class="nav-link" href="./trabalhorealizado.html">Trabalho Realizado &nbsp &nbsp &nbsp</a>
+					</li>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="./ferramentas.html">Ferramentas utilizadas &nbsp &nbsp &nbsp</a>
-            </li>
+					<li class="nav-item active">
+						<a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
+					</li>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
-            </li>
+					<li class="nav-item active">
+						<a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
+					</li>
+					
+					<li class="nav-item active">
+						<a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
+					</li>
 
-          </ul>
-        </div>
-      </div>
-    </nav>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<br>
+	<br>
+	<br>
 
     <!-- Page Content -->
     <div class="container">
