--- a/analisegeneseproteinas.html
+++ b/analisegeneseproteinas.html
@@ -17,45 +17,46 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav m-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="./index.html">Home &nbsp &nbsp &nbsp
-              </a>
-            </li>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+		<div class="container">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav m-auto">
+					<li class="nav-item ">
+						<a class="nav-link" href="./index.html">Home &nbsp &nbsp &nbsp
+						</a>
+					</li>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="./trabalhorealizado.html">Trabalho Realizado &nbsp &nbsp &nbsp</a>
-            </li>
+					<li class="nav-item active">
+						<a class="nav-link" href="./Introducao.html">Introdução &nbsp &nbsp &nbsp</a>
+					</li>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
-            </li>
+					<li class="nav-item active">
+						<a class="nav-link" href="./trabalhorealizado.html">Trabalho Realizado &nbsp &nbsp &nbsp</a>
+					</li>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
-            </li>
+					<li class="nav-item active">
+						<a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
+					</li>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="./ferramentas.html">Ferramentas utilizadas &nbsp &nbsp &nbsp</a>
-            </li>
+					<li class="nav-item active">
+						<a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
+					</li>
+					
+					<li class="nav-item active">
+						<a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
+					</li>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
-            </li>
-
-          </ul>
-        </div>
-      </div>
-    </nav>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<br>
 	<br>
 	<br>
+
 
 	<h4> Análise e anotação dos genes e proteínas de interesse  </h4>
 	<p>  &nbsp De forma a proceder a anotação dos genes e proteínas de interesse realizou-se uma tabela com a seguinte informação: 
@@ -108,8 +109,6 @@
 
 				<center>GTP+3H2O=formate+2,5-diamino-6-hydroxy-4-(5-phospho-D-ribosylamino)pyrimidine+diphosphate</center>
 				<br>
-
-				A localização subcelular da proteína foi inferida com a consulta da plataforma LOCTREE, tendo-se chegado à conclusão que a localização é o citoplasma, obtendo-se esta informação com um score de 92.<br>
 
 				A localização subcelular da proteína foi inferida com a consulta da plataforma LOCTREE, tendo-se chegado à conclusão que a localização é o citoplasma, obtendo-se esta informação com um score de 100, sendo por isso uma informação confiável.  
 			</p>
