Alteraçao da identação do website e adição de imagens do domínio das proteinas

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
     <div class="container">
 
       <!-- Portfolio Item Heading -->
-      <h1 class="my-4"><br>Legionella pneumophila<br>
-      </h1>
+      <h1 class="my-4">Legionella pneumophila</h1>
       <hr>
 
       <!-- Portfolio Item Row -->
