--- a/layout.html
+++ b/layout.html
@@ -11,6 +11,7 @@
 	<title>Legionella pneumophila </title>
 
 	<link href="./website/css/bootstrap.css" rel="stylesheet">
+	<link href="css/portfolio-item.css" rel="stylesheet">
 
 </head>
 
@@ -52,26 +53,6 @@
 			</div>
 		</div>
 	</nav>
-
 	<br>
 	<br>
 	<br>
-	<br>
-
-	<center><h4> <a class="nav-link" href="./analiseliteratura.html"> Análise de Literatura </a></h4></center>
-
-	<center><h6> (No relatório fala de Flavin Biosynthesis logo a seguir. É para colocar na análise de literatura?)</h6></center>
-
-	<center><h4> <a class="nav-link" href="./analisegeneseproteinas.html">Análise e anotação dos genes e proteínas de interesse</a></h4><center>
-
-	<center><h4> <a class="nav-link" href="./homologiasBLAST.html"> Análise de homologias por BLAST</a> </h4></center>
-
-	<center><h4> <a class="nav-link" href="./ferramentasdeanalise.html"> Ferramentas de análise das propriedades da proteína</a> </h4></center>
-
-	<center><h4> <a class="nav-link" href="./domProteinas.html"> Domínios de proteínas</a> </h4></center>
-
-	<center><h4> <a class="nav-link" href="./motifseestrutura.html"> Análise de motifs e estrutura das proteínas</a> </h4></center>
-
-	<center><h4> <a class="nav-link" href="./alinhamento.html"> Alinhamento múltiplo e filogenia</a> </h4></center>
-
-	<center><h4> <a class="nav-link" href="./regulacao.html"> Regulação das vias metabólicas </a></h4></center>
