Alterei identação das páginas

--- a/domProteinas.html
+++ b/domProteinas.html
@@ -60,15 +60,15 @@
 
 	<center><h4>Domínio de proteínas</h4></center>
 
-	<p>De forma a completar informação à cerca das funções das proteínas de interesse, recorreu-se à análise dos domínios dessas proteínas através da pesquisa em bases de dados de domínios de proteínas como a NCBI CDD (conserved domain database). </p>
+	<p>&nbsp &nbsp &nbsp De forma a completar informação à cerca das funções das proteínas de interesse, recorreu-se à análise dos domínios dessas proteínas através da pesquisa em bases de dados de domínios de proteínas como a NCBI CDD (conserved domain database). </p>
 
 	<center>
  		<img src="./website/img/cdd1.jpg" alt="" >
 			<figcaption>Fig1. Domínio presente na proteina riboflavin biosynthesis protein RibD</figcaption>
 	</center>
 
-	<p>Assim, inseriu-se a sequência da proteína riboflavin biosynthesis protein RibD nesta base de dados, tendo-se obtido como resultado o domínio MafB18-deam super family, pelo que podemos inferir que a proteína tem uma função enzimática, tal como anteriormente verificado em outras bases de dados como a Uniprot. Mais especificamente, podemos concluir que esta proteína tem uma função de deaminase, estando por isso envolvida na remoção de grupos amina de determinadas moléculas. Podemos fazer esta inferência, uma vez que o e-value obtido é bastante baixo (2.29e-69) pelo que que se podem considerar os dados obtidos como confiáveis. <br>
-	De seguida, para análise da proteína riboflavin synthase subunit alpha, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio PRK09289, podendo-se concluir que a proteína terá a função de catalisar reações envolvidas na biossíntese de riboflavina, função já esperada e concordante com os resultados obtidos noutras bases de dados. Os resultados podem ser considerados fiáveis uma vez que o e-value é, mais uma vez, bastante reduzido (2.09e-84). 
+	<p> &nbsp &nbsp &nbsp Assim, inseriu-se a sequência da proteína riboflavin biosynthesis protein RibD nesta base de dados, tendo-se obtido como resultado o domínio MafB18-deam super family, pelo que podemos inferir que a proteína tem uma função enzimática, tal como anteriormente verificado em outras bases de dados como a Uniprot. Mais especificamente, podemos concluir que esta proteína tem uma função de deaminase, estando por isso envolvida na remoção de grupos amina de determinadas moléculas. Podemos fazer esta inferência, uma vez que o e-value obtido é bastante baixo (2.29e-69) pelo que que se podem considerar os dados obtidos como confiáveis. <br>
+	&nbsp &nbsp &nbsp De seguida, para análise da proteína riboflavin synthase subunit alpha, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio PRK09289, podendo-se concluir que a proteína terá a função de catalisar reações envolvidas na biossíntese de riboflavina, função já esperada e concordante com os resultados obtidos noutras bases de dados. Os resultados podem ser considerados fiáveis uma vez que o e-value é, mais uma vez, bastante reduzido (2.09e-84). 
  	</p>
 
  	<center>
@@ -76,21 +76,21 @@
 			<figcaption>Fig2. Domínio presente na proteina riboflavin synthase subunit alpha </figcaption>
 	</center>
 
- 	<p>Para análise da proteína riboflavin biosynthesis protein RibA, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio DHBP_synthase super family. Podemos, assim, inferir que esta proteína tem uma função enzimática de sintase, mais especificamente, serve como percursor biossintético do xylene ring da riboflavina. O evalue é 0, pelo que os resultados podem ser considerados fiáveis. </p>
+ 	<p>&nbsp &nbsp &nbsp Para análise da proteína riboflavin biosynthesis protein RibA, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio DHBP_synthase super family. Podemos, assim, inferir que esta proteína tem uma função enzimática de sintase, mais especificamente, serve como percursor biossintético do xylene ring da riboflavina. O evalue é 0, pelo que os resultados podem ser considerados fiáveis. </p>
 
  	<center>
  		<img src="./website/img/cdd3.jpg" alt="" >
 			<figcaption>Fig3. Domínio presente na proteina riboflavin biosynthesis protein RibA </figcaption>
 	</center>
 
- 	<p>Para análise da proteína 6,7-dimethyl-8-ribityllumazine synthase, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio Lumazine_synthase-I, podendo-se inferir que esta proteína tem função de sintase, catalisando um dos últimos passos da biossíntese de riboflavina. Mais uma vez, o e-value é bastante baixo (2.56e-71), pelo que os resultados podem ser considerados confiáveis.</p>
+ 	<p>&nbsp &nbsp &nbsp Para análise da proteína 6,7-dimethyl-8-ribityllumazine synthase, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio Lumazine_synthase-I, podendo-se inferir que esta proteína tem função de sintase, catalisando um dos últimos passos da biossíntese de riboflavina. Mais uma vez, o e-value é bastante baixo (2.56e-71), pelo que os resultados podem ser considerados confiáveis.</p>
 
  	<center>
  		<img src="./website/img/cdd4.jpg" alt="" >
 			<figcaption>Fig4. Domínio presente na proteina 6,7-dimethyl-8-ribityllumazine synthase </figcaption>
 	</center>
 
- 	<p>Para análise da proteína riboflavin biosynthesis RibF, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio PRK05627. Assim, podemos concluir que esta proteína terá a função de riboflavina cinase, responsável pela conversão da riboflavina nos cofatores FMN e FAD, tendo, assim, uma função importante no metabolismo de flavina. Mais uma vez, o e-value é bastante reduzido (3.45e-142) pelo que se pode considerar os resultados como confiáveis.</p>
+ 	<p>&nbsp &nbsp &nbsp Para análise da proteína riboflavin biosynthesis RibF, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio PRK05627. Assim, podemos concluir que esta proteína terá a função de riboflavina cinase, responsável pela conversão da riboflavina nos cofatores FMN e FAD, tendo, assim, uma função importante no metabolismo de flavina. Mais uma vez, o e-value é bastante reduzido (3.45e-142) pelo que se pode considerar os resultados como confiáveis.</p>
 
  	<center>
  		<img src="./website/img/cdd5.jpg" alt="" >
