--- a/regulacao.html
+++ b/regulacao.html
@@ -10,8 +10,7 @@
 
 	<title>Legionella pneumophila </title>
 
-	<link href="./website/css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/portfolio-item.css" rel="stylesheet">
+	<link href="./website/css/bootstrap.css" rel="stylesheet">
 
 </head>
 
@@ -53,14 +52,10 @@
 			</div>
 		</div>
 	</nav>
-	<br>
-	<br>
-	<br>
 
-<br>
-<br>
-<br>
-
+	<br>
+	<br>
+	<br>
 <h4> Regulação da via metabólica </h4>
 <p>  &nbsp A riboflavina (ou vitamina B2) é um componente essencial da dieta humana e animal, uma vez que serve como precursor para 2 cofatores de flavina bastante importantes envolvidos no metabolismo oxidativo: 
   <ol>
