--- a/trabalhorealizado.html
+++ b/trabalhorealizado.html
@@ -62,7 +62,7 @@
 
 	<center><h6> (No relatório fala de Flavin Biosynthesis logo a seguir. É para colocar na análise de literatura?)</h6></center>
 
-	<center><h4> <a class="nav-link" href="./analisegeneseproteinas.html">Análise e anotação dos genes e proteínas de interesse</a></h4><center>
+	<center><h4> <a class="nav-link" href="./analisegeneseproteinas.html">Análise e anotação de genes e proteínas de interesse</a></h4><center>
 
 	<center><h4> <a class="nav-link" href="./homologiasBLAST.html"> Análise de homologias por BLAST</a> </h4></center>
 
