--- a/regulacao.html
+++ b/regulacao.html
@@ -56,19 +56,54 @@
 	<br>
 	<br>
 	<br>
-<h4> Regulação da via metabólica </h4>
-<p>  &nbsp A riboflavina (ou vitamina B2) é um componente essencial da dieta humana e animal, uma vez que serve como precursor para 2 cofatores de flavina bastante importantes envolvidos no metabolismo oxidativo: 
+
+	<center><h4> Regulação da via metabólica </h4></center>
+	<p>  &nbsp &nbsp &nbsp A riboflavina (ou vitamina B2) é um componente essencial da dieta humana e animal, uma vez que serve como precursor para 2 cofatores de flavina bastante importantes envolvidos no metabolismo oxidativo:  
   <ol>
     <li>FMN – mononucleótido de flavina </li>
     <li>FAD – dinucleótido de flavina-adenina </li>
   </ol>
 
-  &nbsp A regulação da riboflavina ocorre ao nível da atividade enzimática e da sua síntese, ocorrendo principalmente ao nível da produção das enzimas da sua via metabólica.<br>
+	<p>&nbsp  &nbsp  &nbsp A regulação da riboflavina ocorre ao nível da atividade enzimática e da sua síntese, ocorrendo principalmente ao nível da produção das enzimas da sua via metabólica.
+	A regulação da riboflavina ocorre ao nível da atividade enzimática e da sua síntese, ocorrendo principalmente ao nível da produção das enzimas da sua via metabólica. Embora muito pouco se saiba em relação a estes mecanismos de regulação e não ocorram de igual forma em todos os organismos, um destes mecanismos é a inibição por feedback da enzima GTP Cyclohydrolase II e da enzima GTP cyclohydrolase I. Relativamente à enzima GTP Cyclohydrolase II não se conhece o mecanismo exacto através do qual o feedback acontece, ainda que estudos mostrem que poderá ser a concentração de FMN que iniba a enzima, sendo que quando a concentração deste composto é elevada à inibição da enzima podendo este ser o passo limitante da via metabólica. 
+	</p>
+	<p>
+		&nbsp  &nbsp  &nbsp Outro mecanismo por feedback sugerido baseia-se na inibição da enzima 6,7-dimethyl-8-ribityllumazine que é inibida pela concentração elevada de riboflavina, inibição esta que vai parar a via metabólica e parar a produção deste composto<sup>1,2</sup>. Outro importante mecanismo de regulação é através do "Riboswitch" presente no operão da Riboflavina, também conhecido como operão rib (constituído por 5 genes ribGBAHT), que são responsáveis pela síntese das enzimas responsáveis pela produção de riboflavina. Este operão tem uma zona denominada RFN elemento que consiste numa estrutura de RNA que altera a sua conformação tendo em conta os elementos que tem a si ligados. Um exemplo deste mecanismo consiste na ligação do FMN ao RFN o que vai alterar a sua conformação, alteração esta que vai pedir a transcrição normal dos genes do operão e desta forma impedir a normal produção de riboflavina. Quando a concentração de FMN diminui esta deixa de estar ligada ao RFN, a conformação deste volta ao normal e desta forma ocorre a transcrição génica normal<sup>3</sup>.  
+	</p>
 
-  &nbsp Embora muito pouco se saiba em relação a estes mecanismos de regulação e não ocorram de igual forma em todos os organismos, um destes mecanismos é a inibição por feedback da enzima GTP Cyclohydrolase II e da enzima GTP cyclohydrolase I. Relativamente à enzima GTP Cyclohydrolase II não se conhece o mecanismo exacto através do qual o feedback acontece, ainda que estudos mostrem que poderá ser a concentração de FMN que iniba a enzima, sendo que quando a concentração deste composto é elevada à inibição da enzima podendo este ser o passo limitante da via metabólica. Outro mecanismo por feedback sugerido baseia-se na inibição da enzima 6,7-dimethyl-8-ribityllumazine que é inibida pela concentração elevada de riboflavina, inibição esta que vai parar a via metabólica e parar a produção deste composto.<br>
+	<center><h4> Fatores de virulência </h4></center>
 
-  &nbsp Outro importante mecanismo de regulação é através do “Riboswitch” presente no operão da Riboflavina, também conhecido como operão rib (constituído por 5 genes ribGBAHT), que são responsáveis pela síntese das enzimas responsáveis pela produção de riboflavina. Este operão tem uma zona denominada RFN elemento que consiste numa estrutura de RNA que altera a sua conformação tendo em conta os elementos que tem a si ligados. Um exemplo deste mecanismo consiste na ligação do FMN ao RFN o que vai alterar a sua conformação, alteração esta que vai pedir a transcrição normal dos genes do operão e desta forma impedir a normal produção de riboflavina. Quando a concentração de FMN diminui esta deixa de estar ligada ao RFN, a conformação deste volta ao normal e desta forma ocorre a transcrição génica normal. <br>  
-</p>
+	<p>
+	&nbsp  &nbsp  &nbsp Para a pesquisa destes factores procedemos a uma procura na base de dados "Virulence Factors of Pathogenic Bacteria", tendo sido pesquisadas as proteínas relativamente à via que nos foi atribuída. Os factores de virulência associados à via referida e ao microorganismo Legionella Pneumophilaforam os seguintes:
+	<ul style="list-style-type:disc"> 
+	<li>Dot/Icm: permite a sobrevivência e crescimento em macrófagos prevenindo a acidificação dos fagossomas e a fusão lisossomal.</li>
+	<li>FeoAB:  versão mutante do gene feoB aumentando o crescimento intracelular.</li>
+	<li>Flagella: aumenta a capacidade de invasão do microorganismo.</li>
+	<li>FrgA: aumenta a capacidade de replicação extracelular, infeção  e virulência.</li>
+	<li>LigA: factor de virulência relacionado com a replicação em protozoários.</li>
+	<li>pmiA: envolvido na sobrevivência e replicação dentro de macrófagos e protozoários.</li>
+	<li>Pht: permiteao microorganismo que seja nutrido dentro dos fagossomas.</li>
+	</ul>
+	</p>
+
+	<center><h4> Resistência a antibióticos</h4></center>
+	 <p>&nbsp  &nbsp  &nbsp Relativamente à pesquisa da existência de resistência a antibióticos relacionada com as proteínas da nossa via metabólica efetuou-se a procura dos mesmos na base de dados "CARD". Os dados obtidos foram de que não existe resistência a antibióticos relacionada com estas proteínas e com o microrganismo que estamos a estudar em específico.
+	 </p>
+
+	 <center><h4> Referências</h4></center>
+	 		<p>
+			<ol>
+				<li>
+					WILSON AC, PARDEE AB. Regulation of Flavin Synthesis by Escherichia coli. J Gen Microbiol [Internet]. 1962 Jun 1 [cited 2018 Jan 26];28(2):283–303. Available from: <a href="http://www.ncbi.nlm.nih.gov/pubmed/14007303"> here </a>
+				</li>
+				<li>
+						Abbas CA, Sibirny AA. Genetic Control of Biosynthesis and Transport of Riboflavin and Flavin Nucleotides and Construction of Robust Biotechnological Producers. Microbiol Mol Biol Rev [Internet]. 2011 Jun 1 [cited 2018 Jan 26];75(2):321–60. Available from: <a href="http://www.ncbi.nlm.nih.gov/pubmed/21646432"> here </a>
+				</li>
+				<li>
+					Serganov A, Huang L, Patel DJ. Coenzyme recognition and gene regulation by a flavin mononucleotide riboswitch. Nature [Internet]. 2009 Mar 25 [cited 2018 Jan 26];458(7235):233–7. Available from:  <a href="http://www.ncbi.nlm.nih.gov/pubmed/19169240"> here </a>
+				</li>
+			</ol>
+		</p>
 
 <br>
 <br>
