--- a/alinhamento.html
+++ b/alinhamento.html
@@ -67,7 +67,7 @@
 		<li> RibD - lpg1177</li>
 	</ul>
 		<center>
- 		<img src="/website/img/lpg1177.png" alt="" >
+ 		<img src="./website/img/lpg1177.png" alt="" >
 			<figcaption>Fig1. Árvore filogenética obtida através de BioPython </figcaption>
 		</center>
 	
@@ -78,7 +78,7 @@
 	</ul>
 
 		<center>
- 		<img src="/website/img/lpg1178.png" alt="" >
+ 		<img src="./website/img/lpg1178.png" alt="" >
 			<figcaption>Fig2. Árvore filogenética obtida através de BioPython</figcaption>
 		</center>
 
@@ -88,7 +88,7 @@
 		<li> RibA - lpg1179</li>
 	</ul>
 		<center>
- 		<img src="/website/img/lpg1179.png" alt="" >
+ 		<img src="./website/img/lpg1179.png" alt="" >
 			<figcaption>Fig3. Árvore filogenética obtida através de BioPython</figcaption>
 		</center>
 
@@ -100,7 +100,7 @@
 	</ul>
 
 		<center>
- 		<img src="/website/img/lpg1180.png" alt="" >
+ 		<img src="./website/img/lpg1180.png" alt="" >
 			<figcaption>Fig4. Árvore filogenética obtida através de BioPython</figcaption>
 		</center>
 
@@ -110,7 +110,7 @@
 		<li> RibF - lpg0936</li>
 	</ul>
 		<center>
- 		<img src="/website/img/lpg0936.png" alt="" >
+ 		<img src="./website/img/lpg0936.png" alt="" >
 			<figcaption>Fig5. Árvore filogenética obtida através de BioPython</figcaption>
 		</center>
 
