--- a/domProteinas.html
+++ b/domProteinas.html
@@ -63,7 +63,7 @@
 	<p>&nbsp &nbsp &nbsp De forma a completar informação à cerca das funções das proteínas de interesse, recorreu-se à análise dos domínios dessas proteínas através da pesquisa em bases de dados de domínios de proteínas como a NCBI CDD (conserved domain database). </p>
 
 	<center>
- 		<img src="./website/img/cdd1.jpg" alt="" >
+ 		<img src="./website/img/cdd1.png" alt="" >
 			<figcaption>Fig1. Domínio presente na proteina riboflavin biosynthesis protein RibD</figcaption>
 	</center>
 
