Atualização das imagens

--- a/domProteinas.html
+++ b/domProteinas.html
@@ -72,28 +72,28 @@
  	</p>
 
  	<center>
- 		<img src="./website/img/cdd2.jpg" alt="" >
+ 		<img src="./website/img/cdd2.png" alt="" >
 			<figcaption>Fig2. Domínio presente na proteina riboflavin synthase subunit alpha </figcaption>
 	</center>
 
  	<p>&nbsp &nbsp &nbsp Para análise da proteína riboflavin biosynthesis protein RibA, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio DHBP_synthase super family. Podemos, assim, inferir que esta proteína tem uma função enzimática de sintase, mais especificamente, serve como percursor biossintético do xylene ring da riboflavina. O evalue é 0, pelo que os resultados podem ser considerados fiáveis. </p>
 
  	<center>
- 		<img src="./website/img/cdd3.jpg" alt="" >
+ 		<img src="./website/img/cdd3.png" alt="" >
 			<figcaption>Fig3. Domínio presente na proteina riboflavin biosynthesis protein RibA </figcaption>
 	</center>
 
  	<p>&nbsp &nbsp &nbsp Para análise da proteína 6,7-dimethyl-8-ribityllumazine synthase, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio Lumazine_synthase-I, podendo-se inferir que esta proteína tem função de sintase, catalisando um dos últimos passos da biossíntese de riboflavina. Mais uma vez, o e-value é bastante baixo (2.56e-71), pelo que os resultados podem ser considerados confiáveis.</p>
 
  	<center>
- 		<img src="./website/img/cdd4.jpg" alt="" >
+ 		<img src="./website/img/cdd4.png" alt="" >
 			<figcaption>Fig4. Domínio presente na proteina 6,7-dimethyl-8-ribityllumazine synthase </figcaption>
 	</center>
 
  	<p>&nbsp &nbsp &nbsp Para análise da proteína riboflavin biosynthesis RibF, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio PRK05627. Assim, podemos concluir que esta proteína terá a função de riboflavina cinase, responsável pela conversão da riboflavina nos cofatores FMN e FAD, tendo, assim, uma função importante no metabolismo de flavina. Mais uma vez, o e-value é bastante reduzido (3.45e-142) pelo que se pode considerar os resultados como confiáveis.</p>
 
  	<center>
- 		<img src="./website/img/cdd5.jpg" alt="" >
+ 		<img src="./website/img/cdd5.png" alt="" >
 			<figcaption>Fig5.  riboflavin biosynthesis RibF </figcaption>
 	</center>
 
